# skeptic

./: .travis.yml  README.md  pyproject.toml
skeptic/: __init__.py  query.py
tests/: test_havings.py  test_joins.py  test_options.py  test_set.py  test_statements.py  test_where.py
