[tool.poetry]
name = "skeptic"
version = "0.1.0"
description = "A pythonic sql query generator built for the common use cases."
authors = ["Abram Isola <abram@isola.mn>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
